--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+.landingPageContainer {
+    width: 100vw;
+    height: 100vh;
+    background-image: url('/public/background.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #ffffff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.landingPageContainer nav {
+    padding-inline: 1.2rem;
+    padding-block: 1.6rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.landingPageContainer nav h2 {
+    font-size: 1.8rem;
+    font-weight: 500;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.landingPageContainer nav .navlist {
+    display: flex;
+    gap: 1.6rem;
+    cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.landingMainContainer {
+    display: flex;
+    justify-content: space-between;
+    padding-inline: 3rem;
+    height: 80vh;
+    align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.landingMainContainer > div:nth-child(1) {
+    font-size: 2.2rem;
+}
+
+.landingMainContainer > div:nth-child(1) div[role='button'] {
+    background: #d97500;
+    width: fit-content;
+    padding: 1rem;
+    border-radius: 20px;
+    margin-top: 1.9rem;
+}
+
+.landingMainContainer div:nth-child(1) div[role='button'] a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.7rem;
+} 
+
+.landingMainContainer > div:nth-child(2) img {
+    height: 70vh;
+    width: auto;
 }
